add search with province feature and exceptions
